global: fix nav-links border on small resolution

--- a/gitlab.user.styl
+++ b/gitlab.user.styl
@@ -371,7 +371,7 @@
   .author_name a {
     color: $accent !important;
   }
-  .nav-links:not(.quick-link) { border-bottom-color: $t; }
+  .nav-links:not(.quick-link) { colors: 0, $darker, 0; }
   .label-bold { color: $light; }
   .cred { color: $red; }
   .cblue { color: $blue; }
